[package]
name = "caseformat"
description = "Power flow case data format"
version = "0.1.0"
repository = "https://github.com/caseformat/caseformat_rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
derive_builder = "0.12"
anyhow = "1"
zip = { version = "0.6", default-features = false, features = [
    "deflate",
    "time",
] }
time = { version = "0.3", features = ["wasm-bindgen"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1"
soa_derive = { version = "0.13", optional = true }
power_flow_data = { version = "0.2.1", optional = true }

pyo3 = { version = "0.19.0", optional = true, features = ["extension-module"] }

[features]
dataset = ["dep:soa_derive"]
raw = ["dep:power_flow_data"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tsify = "0.4"
#tsify = { git = "https://github.com/irvingoujAtDevolution/tsify-unit8-array.git", branch = "modyfi", features = ["js"] }
#getrandom = { version = "0.2", features = ["js"] }
console_log = "1"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "caseformat"
required-features = ["dataset"]